# cppmariadb

./: README.md
cmake/: Findcpputils.cmake  options.cmake
include/: cppmariadb.h  mariadb.h
include/cppmariadb/: column.h  connection.h  database.h  enums.h  exception.h  field.h  result.h  row.h  statement.h  transaction.h
include/cppmariadb/forward/: column.h  connection.h  database.h  field.h  result.h  row.h  statement.h  transaction.h
include/cppmariadb/impl/: mariadb_handle.h
include/cppmariadb/inline/: connection.inl  database.inl  field.inl  result.inl  row.inl  statement.inl  transaction.inl
include/mariadb/: column.h  config.h  connection.h  database.h  enums.h  exception.h  field.h  result.h  row.h  statement.h  transaction.h
include/mariadb/forward/: column.h  connection.h  database.h  field.h  result.h  row.h  statement.h  transaction.h
include/mariadb/impl/: mariadb_handle.h
include/mariadb/inline/: connection.inl  database.inl  field.inl  result.inl  row.inl  statement.inl  transaction.inl
src/: CMakeLists.txt  exception.cpp  result.cpp  row.cpp  statement.cpp
src/cppmariadb/: result.cpp
test/: CMakeLists.txt  mariadb.cpp  mariadbpp.cpp  mock.cpp
